# sarif-workbench

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
cli/: README.md  pyproject.toml
cli/swb_cli/: __main__.py  code.py  fingerprints.py  swbmeta.py
cli/swb_cli/commands/: enrich.py  upload.py
cli/swb_cli/sarif/: models.py  parser.py
contract/: pyproject.toml
contract/swb_contract/: severity.py  swbmeta.py  verdict.py
docs/: index.md
docs/api/: reference.md
docs/guide/: cli.md  deployment.md  quickstart.md
docs/ru/: index.md
samples/cpp-bank/: Makefile  main.cpp  report.sarif  report_v2.sarif  report_v3.sarif  rules.yaml
server/: Dockerfile  pyproject.toml
server/data.bak-pretest-pollution-t36/: swb.db
server/swb_server/: db.py  ingest.py  main.py  models.py  report_gen.py  report_gen_pdf.py  storage.py  verdicts.py
server/swb_server/ai/: analyze_loop.py  deepseek.py  openai_compatible.py  prompts.py  providers.py
server/swb_server/routers/: analyze.py  findings.py  projects.py  report.py  report_pdf.py  report_sarif.py  runs.py
tests/: README.md
tests/cli/: test_code.py  test_enrich.py  test_fingerprints.py  test_malicious_input.py  test_multi_location.py  test_parser.py  test_swb_id.py
tests/contract/: conftest.py  test_sarif_parser.py  test_severity_verdict.py
tests/docs/: test_deployment_docs.py  test_readme_claims.py
tests/infra/: test_prod_compose_secrets.py
tests/server/: conftest.py  test_analyze.py  test_analyze_loop.py  test_baseline_diff.py  test_carry_over.py  test_carry_over_protection.py  test_e2e_golden_identity.py  test_error_hygiene.py  test_findings_pagination.py  test_ingest_identity.py  test_ingest_via_shared_parser.py  test_log_sanitization.py  test_malicious_input.py  test_meta_sarif_reconciliation.py  test_multi_location.py  test_project_autocreate.py  test_prompt_provenance.py  test_provider_registry.py  test_providers_endpoint.py  test_report_limit.py  test_report_severity_order.py  (+10 more)
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
(+52 files in other folders)
