[project]
name = "swb-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "swb-contract"]

[project.scripts]
swb-cli = "swb_cli.__main__:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
swb-contract = { workspace = true }
